--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -17,6 +17,7 @@ prometheus = "1.8.4"
 spring-doc = "1.6.6"
 caffeine = "2.9.3"
 json-web-token = "0.11.2"
+ktlint = "10.3.0"
 
 [libraries]
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
@@ -42,6 +43,7 @@ querydsl-jpa = { module = "com.querydsl:querydsl-jpa", version.ref = "querydsl" 
 querydsl-apt = { module = "com.querydsl:querydsl-apt", version.ref = "querydsl" }
 # tools
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+ktlint-gradle = { module = "org.jlleitschuh.gradle.ktlint:org.jlleitschuh.gradle.ktlint.gradle.plugin", version.ref = "ktlint" }
 dokka-core = { module = "org.jetbrains.dokka:dokka-core", version.ref = "dokka" }
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
@@ -83,3 +85,4 @@ spring-dependency-management = { id = "io.spring.dependency-management", version
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint"}
