--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -36,6 +36,7 @@ spring-boot-starter-security = { module = "org.springframework.boot:spring-boot-
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test" }
 spring-boot-configuration-processor = { module = "org.springframework.boot:spring-boot-configuration-processor" }
 spring-boot-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
+spring-data-envers = { module = "org.springframework.data:spring-data-envers" }
 # database
 h2 = { module = "com.h2database:h2", version.ref = "h2" }
 mysql-connector = { module = "mysql:mysql-connector-java", version.ref = "mysql" }
@@ -63,7 +64,8 @@ spring-boot-web = ["spring-boot-starter-web",
     "spring-boot-starter-security"]
 spring-boot-data = ["spring-boot-starter-data-jpa",
     "spring-boot-starter-actuator",
-    "spring-boot-starter-validation"]
+    "spring-boot-starter-validation",
+    "spring-data-envers"]
 kotlin = ["kotlin-reflect",
     "kotlin-stdlib-jdk8",
     "kotlin-logging",
